--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "eslint-webpack-plugin": "^4.0.0",
     "gh-pages": "^5.0.0",
     "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "source-map-loader": "^4.0.1",
     "stylelint": "^15.3.0",
     "stylelint-config-standard": "^31.0.0",
